--- a/crm.html
+++ b/crm.html
@@ -33,13 +33,10 @@
           <input class="form__input" type="text" name="product">
         </label>
         <div class="checked">
-        <label class="form__name form__check-name" for="btn">
+        <label class="form__name form__check-name" for="btn"></label>
           дисконт
-        <input class="form__check-discount" type="checkbox" name="product" id="btn" checked>
-        </label>
-        <label for="btn" class="form__name-checked">
+          <input class="form__check-discount" type="checkbox" name="product" id="btn" checked>
           <input class="form__discount form__name-checked" type="text" name="product">
-        </label>
       </div>
 
         <label class="form__name form__grid-text">
@@ -60,11 +57,11 @@
           <input  type="file" name="file">
         </label>
       </fieldset>
-      <div class="form__flex">
-      <p>Итоговая стоимость: $ 900.00</p>
-      <button class="form__btn" type="submit">ДОБАВИТЬ ТОВАР</button>
-      </div>
     </form>
+      <div class="form__flex">
+        <p>Итоговая стоимость: $ 900.00</p>
+        <button class="form__btn" type="submit">ДОБАВИТЬ ТОВАР</button>
+      </div>
     </div>
   </div>
   </div>
